# for each "src/x.cpp", generate target "x"
# file(GLOB_RECURSE all_srcs CONFIGURE_DEPENDS *.cpp)
# foreach(v ${all_srcs})
#     string(REGEX MATCH "src/.*" relative_path ${v})
#     # message(${relative_path})
#     string(REGEX REPLACE "src/" "" target_name ${relative_path})
#     string(REGEX REPLACE "bak/" "" target_name ${target_name})
#     string(REGEX REPLACE ".cpp" "" target_name ${target_name})

#     add_executable(${target_name} ${v})
#     target_link_libraries(${target_name} pthread)
# endforeach()

add_executable(main mldp_A4.cpp dpml.cpp global.cpp util.cpp)
target_link_libraries(main pthread)